--- a/approje/Views/Home/login.cshtml
+++ b/approje/Views/Home/login.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = null;
 }
+@model LoginViewModel
 <!doctype html>
 <html lang="zxx">
 <head>
@@ -47,9 +48,6 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="profile-authentication-image">
                         <div class="content-image">
-                            <div class="logo">
-                                <a href="/home/index"><img src="~/assets/images/logo.png" alt="Zust"></a>
-                            </div>
                             <div class="vector-image">
                                 <img src="~/assets/images/vector.png" alt="image">
                             </div>
@@ -61,20 +59,20 @@
                     <div class="login-form">
                         <h2>Login</h2>
 
-                        <form>
+                        <form asp-controller="Home" asp-action="login" method="post">
                             <div class="form-group">
-                                <label>Username or email</label>
-                                <input type="text" class="form-control">
+                                <label >Username</label>
+                                <input asp-for="UserName" type="text" class="form-control">
                             </div>
 
                             <div class="form-group">
                                 <label>Password</label>
-                                <input type="password" class="form-control">
+                                <input asp-for="Password" type="password" class="form-control">
                             </div>
 
                             <div class="remember-me-wrap d-flex justify-content-between align-items-center">
                                 <p>
-                                    <input type="checkbox" id="test1">
+                                    <input asp-for="RememberMe" type="checkbox" id="test1">
                                     <label for="test1">Remember me</label>
                                 </p>
 
@@ -83,16 +81,14 @@
                                 </div>
                             </div>
                             <button type="submit" class="default-btn">Login</button>
-                            <div class="or-text"><span>Or</span></div>
-                            <button type="submit" class="google-btn">Log In with Google</button>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="home-btn-icon">
-            <a href="/home/index"><i class="flaticon-home"></i></a>
+        <div  class="home-btn-icon">
+            <a href="/home/Register"><i style="height:auto; width:20vi; text-align:center; font:1vi; overflow:hidden;">Register</i></a>
         </div>
     </div>
     <!-- End Preloader Area -->
