--- a/approje/Views/Home/register.cshtml
+++ b/approje/Views/Home/register.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     Layout = null;
 }
+
+@model RegisterViewModel
 <!doctype html>
 <html lang="zxx">
 <head>
@@ -50,10 +52,7 @@
                             <div class="d-table-cell">
                                 <div class="content-image">
                                     <div class="logo">
-                                        <a href="/home/index"><img src="~/assets/images/logo.png" alt="Zust"></a>
-                                    </div>
-                                    <div class="vector-image">
-                                        <img src="~/assets/images/vector.png" alt="image">
+                                        <a href="/home/login">LOGIN</a>
                                     </div>
                                 </div>
                             </div>
@@ -65,26 +64,26 @@
                     <div class="register-form">
                         <h2>Register</h2>
 
-                        <form>
+                        <form asp-controller="Home" asp-action="register" method="post">
                             <div class="form-group">
-                                <label>Name</label>
-                                <input type="text" class="form-control">
+                                <label asp-for="Username">Name</label>
+                                <input asp-for="Username" type="text" class="form-control">
                             </div>
 
                             <div class="form-group">
-                                <label>Email</label>
-                                <input type="email" class="form-control">
+                                <label asp-for="Email">Email</label>
+                                <input  asp-for="Email" type="email" class="form-control">
                             </div>
 
                             <div class="form-group">
-                                <label>Password</label>
-                                <input type="password" class="form-control">
+                                <label  asp-for="Password">Password</label>
+                                <input  asp-for="Password" type="password" class="form-control">
                             </div>
 
-                            <div class="form-group">
+             @*               <div class="form-group">
                                 <label>Confirm Password</label>
                                 <input type="password" class="form-control">
-                            </div>
+                            </div>*@
 
                             <div class="remember-me-wrap">
                                 <p>
@@ -92,9 +91,7 @@
                                     <label for="test1">I Accept The <a href="/home/privacy">Privacy</a></label>
                                 </p>
                             </div>
-                            <button type="submit" class="default-btn">Register</button>
-                            <div class="or-text"><span>Or</span></div>
-                            <button type="submit" class="google-btn">Log In with Google</button>
+                            <button type="submit" class="default-btn">Register</button>         
                         </form>
                     </div>
                 </div>
