--- a/approje/Views/Home/Index.cshtml
+++ b/approje/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿
-
+﻿@{
+    var user = ViewBag.User as UserViewModel;
+}
     <!-- Start Preloader Area -->
     
     <div class="main-content-wrapper d-flex flex-column">
@@ -112,7 +113,7 @@
                             <div class="profile-box d-flex justify-content-between align-items-center">
                                 <a href="/home/my-profile"><img src="~/assets/images/user/user-1.jpg" alt="image"></a>
                                 <div class="text ms-2">
-                                    <h3><a href="/home/my-profile">Matthew Turner</a></h3>
+                                    <h3><a href="/home/my-profile">@user.Name</a></h3>
                                     <span>Washington</span>
                                 </div>
                             </div>
@@ -374,7 +375,7 @@
                                         <a href="#">
                                             <img src="~/assets/images/user/user-13.jpg" alt="image">
                                         </a>
-                                        <span><a href="#">Matthew</a></span>
+                                        <span><a href="#">@user.Name</a></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-sm-4 col-4">
