--- a/approje/Views/Home/Index.cshtml
+++ b/approje/Views/Home/Index.cshtml
@@ -1157,3 +1157,6 @@
     <div class="go-top">
         <i class="ri-arrow-up-line"></i>
     </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
