--- a/approje/Views/Shared/_Layout.cshtml
+++ b/approje/Views/Shared/_Layout.cshtml
@@ -991,13 +991,7 @@
     </div>
     <!-- End Main Content Wrapper Area -->
     <!-- Start Copyright Area -->
-    <div class="copyrights-area">
-        <div class="container">
-            <div class="row align-items-center">
-                <p><i class="ri-copyright-line"></i> 2023 Zust. All Rights Reserved by <a href="https://aykhan.net" target="_blank">aykhan.net</a></p>
-            </div>
-        </div>
-    </div>
+    
     <!-- End Copyright Area -->
     <!-- Start Go Top Area -->
     <div class="go-top">
@@ -1685,7 +1679,7 @@
                                         <a href="#" class="dropdown-bs-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <div class="menu-profile">
                                                 <img src="~/assets/images/user/user-1.jpg" class="rounded-circle" alt="image">
-                                                <span class="name">Matthew</span>
+                                                <span class="name">@user.Name</span>
                                                 <span class="status-online"></span>
                                             </div>
                                         </a>
