--- a/approje/Views/Shared/_Layout.cshtml
+++ b/approje/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="~/assets/css/responsive.css">
 
      <title>@ViewData["Title"]</title>
-
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" type="image/png" href="~/assets/images/favicon.png">
 </head>
 
