--- a/approje/Views/Shared/_Layout.cshtml
+++ b/approje/Views/Shared/_Layout.cshtml
@@ -1721,6 +1721,7 @@
 
     <!-- End Go Top Area -->
     <!-- Links of JS files -->
+
     <script src="~/assets/js/jquery.min.js"></script>
     <script src="~/assets/js/bootstrap.bundle.min.js"></script>
     <script src="~/assets/js/jquery.magnific-popup.min.js"></script>
@@ -1730,6 +1731,11 @@
     <script src="~/assets/js/owl.carousel.min.js"></script>
     <script src="~/assets/js/wow.min.js"></script>
     <script src="~/assets/js/main.js"></script>
+
+
+    <script src="~/MyJs/signalr/dist/browser/signalr.js"></script>
+    <script src="~/MyJs/chat.js"></script>
+    <script src="~/MyJs/index.js"></script>
 </body>
 </html>
 
