--- a/approje/Views/Home/Index.cshtml
+++ b/approje/Views/Home/Index.cshtml
@@ -876,6 +876,7 @@
                                 <h3>Online Users</h3>
                         @*        <span><a href="#">See All</a></span>*@
                             </div>
+                        </div>
                           @*  <article class="item">
                                 <a href="#" class="thumb">
                                     <span class="fullimage bg1" role="img">AAA</span>
