--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -63,6 +63,7 @@
                         </li>
                     </ul>
                 </div>
+              
 
                 <div class="profile-list-tabs">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -81,7 +82,12 @@
                     </ul>
                 </div>
 
-                <ul class="profile-social">
+
+
+                <ul class="profile-social" style="margin-top:20px">
+                    <li>
+                            <a id="follow-button">+ Follow</a>
+                    </li>
                     <li>
                         <a href="https://www.facebook.com/EnvyTheme" target="_blank">
                             <img src="~/assets/images/social/facebook.png" alt="image">
@@ -110,6 +116,7 @@
                 </ul>
             </div>
         </div>
+
 
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade" id="about" role="tabpanel">
