--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -1,7 +1,23 @@
-﻿ @model UserViewModel;
+﻿ @model UserViewModel
 
 
-
+ <style>
+    .follow-button {
+        color: #3399FF;
+        font-family: "Helvetica";
+        font-size: 12pt;
+        background-color: #ffffff;
+        border: 1px solid;
+        border-color: #3399FF;
+        border-radius: 5px;
+        width: 85px;
+        height: 30px;
+        text-align: center;
+        justify-content: center;
+        padding: 4px;
+        cursor: pointer;
+    }
+ </style>
 <!-- Start Preloader Area -->
 <div class="preloader-area">
     <div class="spinner">
@@ -83,10 +99,10 @@
                 </div>
 
 
-
+   
                 <ul class="profile-social" style="margin-top:20px">
                     <li>
-                            <a id="follow-button">+ Follow</a>
+                        <a onclick="SendRequest(id)" id="@Model.Id" class="follow-button">+ Follow</a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/EnvyTheme" target="_blank">
