--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -1,23 +1,4 @@
 ﻿ @model UserViewModel
-
-
- <style>
-    .follow-button {
-        color: #3399FF;
-        font-family: "Helvetica";
-        font-size: 12pt;
-        background-color: #ffffff;
-        border: 1px solid;
-        border-color: #3399FF;
-        border-radius: 5px;
-        width: 85px;
-        height: 30px;
-        text-align: center;
-        justify-content: center;
-        padding: 4px;
-        cursor: pointer;
-    }
- </style>
 <!-- Start Preloader Area -->
 <div class="preloader-area">
     <div class="spinner">
@@ -101,8 +82,9 @@
 
    
                 <ul class="profile-social" style="margin-top:20px">
-                    <li>
-                        <a onclick="SendRequest(id)" id="@Model.Id" class="follow-button">+ Follow</a>
+                    <li style="height:auto; width:auto;">
+                
+                        <button type="button" onclick="SendRequest(id)" class="btn btn-primary follow-button" id="@Model.Id">+ Follow</button>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/EnvyTheme" target="_blank">
