--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -1,4 +1,5 @@
-﻿ @model UserViewModel
+﻿@using approje.Dtos;
+@model OwnUserDto
 <!-- Start Preloader Area -->
 <div class="preloader-area">
     <div class="spinner">
@@ -83,8 +84,14 @@
    
                 <ul class="profile-social" style="margin-top:20px">
                     <li style="height:auto; width:auto;">
-                
-                        <button type="button" onclick="SendRequest(id)" class="btn btn-primary follow-button" id="@Model.Id">+ Follow</button>
+                        @if (Model.IsFriend)
+                        {
+                            <button type="button" onclick="deleteRequest(id)" class="btn btn-secondary follow-button" id="@Model.Id">CANCEL</button>
+                        }
+                        else
+                        {
+                            <button type="button" onclick="SendRequest(id)" class="btn btn-primary follow-button" id="@Model.Id">+ Follow</button>
+                        }
                     </li>
                     <li>
                         <a href="https://www.facebook.com/EnvyTheme" target="_blank">
