--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -86,11 +86,11 @@
                     <li style="height:auto; width:auto;">
                         @if (Model.IsFriend)
                         {
-                            <button type="button" onclick="deleteRequest(id)" class="btn btn-secondary follow-button" id="@Model.Id">CANCEL</button>
+                            <button style="font-size:1em"; type="button" onclick="deleteRequest(id)" class="btn btn-secondary follow-button animate__animated  animate__zoomInUp" id="@Model.Id">CANCEL</button>
                         }
                         else
                         {
-                            <button type="button" onclick="SendRequest(id)" class="btn btn-primary follow-button" id="@Model.Id">+ Follow</button>
+                            <button style="font-size:35px; padding:1px 10px 1px 10px;" type="button" onclick="SendRequest(id)" class="btn btn-primary follow-button animate__animated  animate__flash" id="@Model.Id">+</button>
                         }
                     </li>
                     <li>
