--- a/approje/wwwroot/assets/css/style.css
+++ b/approje/wwwroot/assets/css/style.css
@@ -48,7 +48,7 @@ Default CSS
   --white-color: #ffffff;
   --black-color: #515355;
   --paragraph-color: #6B7C8F;
-  --font-size: 16px;
+  --font-size: 1em;
   --transition: .4s;
 }
 
