--- a/approje/Views/Home/Index.cshtml
+++ b/approje/Views/Home/Index.cshtml
@@ -871,146 +871,13 @@
                                 <a href="#"><img src="~/assets/images/weather/weather.jpg" alt="image"></a>
                             </div>
                         </div>
+                         <p style="margin: auto; text-align:center;">Online Users</p>
                         <div class="widget widget-birthday" id="OnlineUsersDiv" >
                             <div class="birthday-title d-flex justify-content-between align-items-center">
-                                <h3>Online Users</h3>
                         @*        <span><a href="#">See All</a></span>*@
                             </div>
                         </div>
-                          @*  <article class="item">
-                                <a href="#" class="thumb">
-                                    <span class="fullimage bg1" role="img">AAA</span>
-                                </a>
-
-                                <div class="info">
-                                    <h4 class="title">
-                                        <a href="#">Earline Benally</a>
-                                    </h4>
-                                    <span>Today</span>
-                                </div>
-                            </article>
-                            <article class="item">
-                                <a href="#" class="thumb">
-                                    <span class="fullimage bg2" role="img"></span>
-                                </a>
-
-                                <div class="info">
-                                    <h4 class="title">
-                                        <a href="#">Jack Gulley</a>
-                                    </h4>
-                                    <span>Today</span>
-                                </div>
-                            </article>
-
-                            <div class="birthday-title d-flex justify-content-between align-items-center">
-                                <h3>Recent Birthdays</h3>
-                                <span><a href="#">See All</a></span>
-                            </div>
-                            <article class="item">
-                                <a href="#" class="thumb">
-                                    <span class="fullimage bg3" role="img"></span>
-                                </a>
-
-                                <div class="info">
-                                    <h4 class="title">
-                                        <a href="#">Lolita Benally</a>
-                                    </h4>
-                                    <span>May 18</span>
-                                </div>
-                            </article>
-                            <article class="item">
-                                <a href="#" class="thumb">
-                                    <span class="fullimage bg4" role="img"></span>
-                                </a>
-
-                                <div class="info">
-                                    <h4 class="title">
-                                        <a href="#">Russell Gulley</a>
-                                    </h4>
-                                    <span>May 20</span>
-                                </div>
-                            </article>
-*@
-                     @*       <div class="birthday-title d-flex justify-content-between align-items-center">
-                                <h3>Coming Birthdays</h3>
-                                <span><a href="#">See All</a></span>
-                            </div>
-                            <article class="item">
-                                <a href="#" class="thumb">
-                                    <span class="fullimage bg5" role="img"></span>
-                                </a>
-
-                                <div class="info">
-                                    <h4 class="title">
-                                        <a href="#">Cindy L. Wilson</a>
-                                    </h4>
-                                    <span>July 18</span>
-                                </div>
-                            </article>
-                            <article class="item">
-                                <a href="#" class="thumb">
-                                    <span class="fullimage bg6" role="img"></span>
-                                </a>
-
-                                <div class="info">
-                                    <h4 class="title">
-                                        <a href="#">Patricia E. Looney</a>
-                                    </h4>
-                                    <span>July 20</span>
-                                </div>
-                            </article>
-                            <article class="item">
-                                <a href="#" class="thumb">
-                                    <span class="fullimage bg7" role="img"></span>
-                                </a>
-
-                                <div class="info">
-                                    <h4 class="title">
-                                        <a href="#">James G. Nelson</a>
-                                    </h4>
-                                    <span>July 21</span>
-                                </div>
-                            </article>
-                        </div>
-                        <div class="widget widget-explore-events">
-                            <h3 class="widget-title">Explore Events</h3>
-
-                            <article class="item">
-                                <a href="#"><img src="~/assets/images/explore-events/explore-1.jpg" alt="image"></a>
-                            </article>
-                            <article class="item">
-                                <a href="#"><img src="~/assets/images/explore-events/explore-2.jpg" alt="image"></a>
-                            </article>
-                        </div>
-                        <div class="widget widget-who-following">
-                            <h3 class="widget-title">Who's Following</h3>
-
-                            <div class="following-item d-flex justify-content-between align-items-center">
-                                <a href="#"><img src="~/assets/images/user/user-42.jpg" class="rounded-circle" alt="image"></a>
-                                <span class="name"><a href="#">Shawn Lynch</a></span>
-                                <span class="add-friend"><a href="#">Add</a></span>
-                            </div>
-                            <div class="following-item d-flex justify-content-between align-items-center">
-                                <a href="#"><img src="~/assets/images/user/user-43.jpg" class="rounded-circle" alt="image"></a>
-                                <span class="name"><a href="#">Kenneth Perry</a></span>
-                                <span class="add-friend"><a href="#">Add</a></span>
-                            </div>
-                            <div class="following-item d-flex justify-content-between align-items-center">
-                                <a href="#"><img src="~/assets/images/user/user-44.jpg" class="rounded-circle" alt="image"></a>
-                                <span class="name"><a href="#">Janet Suarez</a></span>
-                                <span class="add-friend"><a href="#">Add</a></span>
-                            </div>
-                            <div class="following-item d-flex justify-content-between align-items-center">
-                                <a href="#"><img src="~/assets/images/user/user-45.jpg" class="rounded-circle" alt="image"></a>
-                                <span class="name"><a href="#">Brian Mingo</a></span>
-                                <span class="add-friend"><a href="#">Add</a></span>
-                            </div>
-                            <div class="following-item d-flex justify-content-between align-items-center">
-                                <a href="#"><img src="~/assets/images/user/user-46.jpg" class="rounded-circle" alt="image"></a>
-                                <span class="name"><a href="#">Julia Ramos</a></span>
-                                <span class="add-friend"><a href="#">Add</a></span>
-                            </div>
-                        </div>*@
+                       
                     </aside>
                 </div>
             </div>
@@ -1158,4 +1025,5 @@
     <div class="go-top">
         <i class="ri-arrow-up-line"></i>
     </div>
+
 
