--- a/approje/Views/Home/Index.cshtml
+++ b/approje/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     var user = ViewBag.User as UserViewModel;
+    ViewData["Title"] = "Index";
+    ViewData["Scripts"] = "~/MyJs/indexsignalr.js" ;
 }
     <!-- Start Preloader Area -->
 
@@ -1025,5 +1027,7 @@
     <div class="go-top">
         <i class="ri-arrow-up-line"></i>
     </div>
+<script src="~/MyJs/index.js"></script>
+
 
 
