--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -2294,6 +2294,7 @@
         </div>
     </div>
     <!-- End Content Page Box Area -->
+    <script src="~/MyJs/userProfile.js"></script>
    
 
 
