--- a/approje/wwwroot/assets/css/style.css
+++ b/approje/wwwroot/assets/css/style.css
@@ -52,11 +52,14 @@ Default CSS
   --transition: .4s;
 }
 
+.mynewarticlestyle{
+    border: 1px solid green;
+}
 
 body {
-  padding: 0;
-  margin: 0;
-  font-family: var(--main-font-family);
+    padding: 0;
+    margin: 0;
+    font-family: var(--main-font-family);
 }
 
 a {
