--- a/approje/Views/Shared/_Layout.cshtml
+++ b/approje/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                                             <i class="flaticon-user"></i>
                                             @if (user.FriendsRequest.Count > 0)
                                             {
-                                                <span>@user.FriendsRequest.Count</span>
+                                                <span id="UserFriendsCount" >@user.FriendsRequest.Count</span>
                                             }
                                         </div>
                                     </a>
@@ -101,18 +101,16 @@
                                         </div>
 
                                         <div class="friend-requests-body" data-simplebar>
-
                                             @foreach (var item in user.FriendsRequest)
                                             {
                                                 <div class="item d-flex align-items-center">
                                                     <div class="figure">
-                                                        <a href="#"><img src="~/assets/images/user/user-2.jpg" class="rounded-circle" alt="image"></a>
+                                                        <a href="#"><img src="https://w7.pngwing.com/pngs/744/940/png-transparent-anonym-avatar-default-head-person-unknown-user-user-pictures-icon.png" class="rounded-circle" alt="image"></a>
                                                     </div>
 
                                                     <div class="content d-flex justify-content-between align-items-center">
                                                         <div class="text">
-                                                            <h4><a href="#">@item.CustomIdentityUser.UserName</a></h4>
-                                                        
+                                                            <h4><a href="/home/userProfile/@item.ReceiverId">@item.CustomIdentityUser.UserName</a></h4>
                                                         </div>
                                                         <div class="btn-box d-flex align-items-center">
                                                             <button id="@item.ReceiverId" class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
@@ -122,146 +120,6 @@
                                                     </div>
                                                 </div>
                                             }
-
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-2.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">Sandra Cross</a></h4>
-                                                        <span>26 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-3.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">Kenneth Crowe</a></h4>
-                                                        <span>53 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-4.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">Andrea Harwell</a></h4>
-                                                        <span>99 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-5.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">John Lago</a></h4>
-                                                        <span>18 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-6.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">Sandra Cross</a></h4>
-                                                        <span>26 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-7.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">Kenneth Crowe</a></h4>
-                                                        <span>53 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-8.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">Andrea Harwell</a></h4>
-                                                        <span>99 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item d-flex align-items-center">
-                                                <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-9.jpg" class="rounded-circle" alt="image"></a>
-                                                </div>
-
-                                                <div class="content d-flex justify-content-between align-items-center">
-                                                    <div class="text">
-                                                        <h4><a href="#">John Lago</a></h4>
-                                                        <span>18 Friends</span>
-                                                    </div>
-                                                    <div class="btn-box d-flex align-items-center">
-                                                        <button class="delete-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-close-line"></i></button>
-
-                                                        <button class="confirm-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Confirm" type="button"><i class="ri-check-line"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="view-all-requests-btn">
-                                                <a href="/home/friends" class="default-btn">View All Requests</a>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -1368,6 +1226,7 @@
         <script src="@Url.Content(scripttext)"></script>
     }
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/MyJs/layoutcode.js"> </script>
 
 
 </body>
