--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -88,7 +88,7 @@
                         {
                             <div class="btn-group" role="group" aria-label="Basic mixed styles example">
                                 <button type="button" class="btn btn-success">Friend</button>
-                                <button type="button" class="btn btn-danger">UnFollow</button>
+                                <button type="button" class="btn btn-danger" onclick="deletefriend(id)" id="@Model.Id">UnFollow</button>
                             </div>
                         }
                         else
